--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -29,8 +29,9 @@
         </nav>
     </header>
 
-    <main class="container-fluid align-items-center justify-content-center">
+    <main class="container-fluid align-items-center justify-content-start flex-column">
         <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
+        <button class="btn btn-outline-light my-3">Clear list <i class="bi bi-check-lg"></i></button>
         <div>
             <table id="shopping-list-table" class="table bg-secondary table-dark text-center">
                 <thead>
@@ -40,7 +41,7 @@
                         <th scope="col">Quantity</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="shopping-list-table-body">
                 </tbody>
             </table>
         </div>
@@ -51,6 +52,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="shoppinglist.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
