--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -23,70 +24,48 @@
         <nav class="navbar navbar-dark">
             <a class="navbar-brand" href="index.html"><h3>Bubblebasket&trade;</h3></a>
             <div>
-                <a class="btn btn-outline-light" href="shoppinglist.html"><i class="bi bi-list-ul"></i></a>
-                <button class="btn btn-outline-light"><i class="bi bi-person"></i></button>
             </div>
         </nav>
     </header>
 
     <main class="container-fluid">
-        <div class="bubbles">
-            <ul class="bubbles-list">
-                <li class="bubble">
-                    <a href="grains.html" class="bubble-link">
-                        <span>Grains</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="veggies.html" class="bubble-link">
-                        <span>
-                            Veggies
-                        </span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="fruit.html" class="bubble-link">
-                        <span>
-                            Fruit
-                        </span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="dairy.html" class="bubble-link">
-                        <span>
-                            Dairy
-                        </span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="meat.html" class="bubble-link">
-                        <span>
-                            Meat
-                        </span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="fish.html" class="bubble-link">
-                        <span>
-                            Fish
-                        </span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="pantry.html" class="bubble-link">
-                        <span>
-                            Pantry
-                        </span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="drinks.html" class="bubble-link">
-                        <span>
-                            Drinks
-                        </span>
-                    </a>
-                </li>
-            </ul>
+        <div id="loginControls" style="display: none">
+            <h1>Welcome!</h1>
+            <div class="input-group mb-3">
+                <span class="input-group-text">@</span>
+                <input
+                    class="form-control"
+                    type="text"
+                    id="userName"
+                    placeholder="your@email.com"
+                />
+            </div>
+            <div class="input-group mb-3">
+                <span class="input-group-text">🔒</span>
+                <input
+                    class="form-control"
+                    type="password"
+                    id="userPassword"
+                    placeholder="password"
+                />
+            </div>
+            <button type="button" class="btn btn-primary" onclick="loginUser()">
+                Login
+            </button>
+            <button type="button" class="btn btn-primary" onclick="createUser()">
+                Create
+            </button>
+        </div>
+
+        <div id="authenticatedControls" style="display: none">
+            <h1>Welcome!</h1>
+            <div id="playerName"></div>
+            <button type="button" class="btn btn-primary" onclick="useApp()">
+                Enter
+            </button>
+            <button type="button" class="btn btn-secondary" onclick="logout()">
+                Logout
+            </button>
         </div>
     </main>
 
@@ -95,6 +74,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="login.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
