--- a/public/pantry.html
+++ b/public/pantry.html
@@ -30,7 +30,7 @@
     </header>
 
     <main class="container-fluid">
-        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
+        <a class="btn btn-outline-light anchor-top-left" href="main.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
