--- a/public/shoppinglist.html
+++ b/public/shoppinglist.html
@@ -30,7 +30,7 @@
     </header>
 
     <main class="container-fluid align-items-center justify-content-start flex-column">
-        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
+        <a class="btn btn-outline-light anchor-top-left" href="main.html"><i class="bi bi-arrow-return-left"></i></a>
         <button class="btn btn-outline-light my-3" onclick="clearList()">Clear list <i class="bi bi-check-lg"></i></button>
         <div>
             <table id="shopping-list-table" class="table bg-secondary table-dark text-center">
