--- a/public/soda.html
+++ b/public/soda.html
@@ -24,7 +24,7 @@
             <a class="navbar-brand" href="index.html"><h3>Bubblebasket&trade;</h3></a>
             <div>
                 <a class="btn btn-outline-light" href="shoppinglist.html"><i class="bi bi-list-ul"></i></a>
-                <button class="btn btn-outline-light"><i class="bi bi-person"></i></button>
+                <a class="btn btn-outline-light" href="index.html"><i class="bi bi-person"></i></a>
             </div>
         </nav>
     </header>
