--- a/public/shoppinglist.html
+++ b/public/shoppinglist.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="shopping.css">
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -31,6 +32,7 @@
 
     <main class="container-fluid align-items-center justify-content-start flex-column">
         <a class="btn btn-outline-light anchor-top-left" href="main.html"><i class="bi bi-arrow-return-left"></i></a>
+        <div class="messages-list"></div>
         <button class="btn btn-outline-light my-3" onclick="clearList()">Clear list <i class="bi bi-check-lg"></i></button>
         <div>
             <table id="shopping-list-table" class="table bg-secondary table-dark text-center">
@@ -52,6 +54,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="connection.js"></script>
     <script src="shoppinglist.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
